* Improvement: Stop flash from index page from persisting across requests
* UI: Use a light background
* UI: Improve element spacing on index page

New in 0.0.8:

* Change: Change the `DashboardManifest` and `ModelDashboard` APIs
  to use constants instead of methods. Recognized constants are:
  * `ATTRIBUTE_TYPES`
  * `FORM_ATTRIBUTES`
  * `SHOW_PAGE_ATTRIBUTES`
  * `FORM_ATTRIBUTES`

New in 0.0.7:

* Improvement: Support `has_one` relationships
* Improvement: Support `has_many :through` associations
  with a custom `source` option.
* Improvement: Support `has_many` associations
  with a custom `class_name` option.
* Change: use field classes for `attribute_types` instead of symbols.
  The new interface adds the `.with_options` class method,
  which allows developers to specify options that will be applied
  when the field object is initialized.

New in 0.0.6:

* Improvement: Add an outline to links on their focus state
  to improve accessibility through keyboard navigation.
* Improvement: Limit index pages
  to displaying four columns of attributes by default,
  to reduce clutter and overflow in the first-run experience.
* Improvement: Limit index pages to showing 20 items by default.
  Developers can customize the action to update or remove the limit,
  or to implement pagination with the system of their choice.

New in 0.0.5:

* Compatibility: Administrate relies on the `&-suffix` feature of SASS,
  which was [released in 3.3.0], as well as using `&` in SassScript,
  which was [released in 3.4.0]. We've declared an explicit dependency
  on `sass ~> 3.4`.

[released in 3.3.0]: http://sass-lang.com/documentation/file.SASS_CHANGELOG.html#330_7_march_2014
[released in 3.4.0]: http://sass-lang.com/documentation/file.SASS_CHANGELOG.html#340_18_august_2014

New in 0.0.4:

* Improvement: Use [selectize.js](http://brianreavis.github.io/selectize.js/)
  to improve has_many form field interaction.
* Interface: remove the "Show" link from tables - it was redundant because