@@ -1,3 +1,6 @@
+* Bug Fix: Improve development environment;
+  developers can now edit Administrate-related files
+  without needing to restart their server afterwards.
 * Improvement: Stop flash from index page from persisting across requests
 * UI: Use a light background
 * UI: Improve element spacing on index page
